// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meetsContrastGuidelines should return failing contrast guidelines when used with a transparent color 1`] = `
Object {
  "AA": false,
  "AAA": false,
  "AAALarge": false,
  "AALarge": false,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two 4-digit hex colors 1`] = `
Object {
  "AA": true,
  "AAA": true,
  "AAALarge": true,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two 8-digit hex colors 1`] = `
Object {
  "AA": true,
  "AAA": false,
  "AAALarge": true,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two hex colors 1`] = `
Object {
  "AA": true,
  "AAA": true,
  "AAALarge": true,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two hsl colors 1`] = `
Object {
  "AA": false,
  "AAA": false,
  "AAALarge": false,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two hsla colors 1`] = `
Object {
  "AA": true,
  "AAA": true,
  "AAALarge": true,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two named CSS colors 1`] = `
Object {
  "AA": true,
  "AAA": true,
  "AAALarge": true,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two rgb colors 1`] = `
Object {
  "AA": true,
  "AAA": true,
  "AAALarge": true,
  "AALarge": true,
}
`;

exports[`meetsContrastGuidelines should return the color contrast guidelines of two rgba colors 1`] = `
Object {
  "AA": false,
  "AAA": false,
  "AAALarge": false,
  "AALarge": true,
}
`;
